[package]
name = "garden-cli"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "garden"
path = "src/main.rs"

[lib]
name = "digital_garden"
path = "src/lib.rs"

[dependencies]
clap = { version = "3.0.7", features = ["derive", "env"] }
color-eyre = "0.5.11"
directories = "4.0.1"
edit = "0.1.3"
rprompt = "1.0.5"
slug = "0.1.4"

[dev-dependencies]
assert_cmd = "2.0.2"
assert_fs = "1.0.6"
predicates = "2.0.3"
